k8s/uporabnikova-shramba-izdelkov-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uporabnikova-shramba-izdelkov-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uporabnikova-shramba-izdelkov
  template:
    metadata:
      labels:
        app: uporabnikova-shramba-izdelkov
    spec:
      containers:
        - image: rsoskupina50/uporabnikova-shramba-izdelkov:2022-12-03-13-02-36
          name: uporabnikova-shramba-izdelkov
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: uporabnikova-shramba-izdelkov
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
<<<<<<< HEAD
    app: uporabnikova-shramba-izdelkov
=======
    app: uporabnikova-shramba-izdelkov
>>>>>>> 19d367ff1bf7b115a4209d9bc0a4f5f05b322f0b
